--- a/src/declarative/CMakeLists.txt
+++ b/src/declarative/CMakeLists.txt
@@ -9,8 +9,11 @@ add_library(runnermodelplugin SHARED ${runnermodel_SRCS})
 target_link_libraries(runnermodelplugin
         Qt5::Quick
         Qt5::Qml
+        Qt5::Widgets # QAction
         KF5::I18n
-        )
+        KF5::Service
+        KF5Runner
+)
 
 install(TARGETS runnermodelplugin DESTINATION ${QML_INSTALL_DIR}/org/kde/runnermodel)
 install(FILES qmldir DESTINATION ${QML_INSTALL_DIR}/org/kde/runnermodel)
