Use ecm_configure_package_config_file
Ported with:
sed -i -e 's/\(include(\)CMake\(PackageConfigHelpers)\)/\1ECM\2/' \
       -e 's/\<\(configure_package_config_file\)/ecm_\1/' \
       CMakeLists.txt

See http://commits.kde.org/extra-cmake-modules/139f60d81653888f696ef433

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ include(FeatureSummary)
 include(GenerateExportHeader)
 include(ECMSetupVersion)
 include(ECMGenerateHeaders)
-include(CMakePackageConfigHelpers)
+include(ECMPackageConfigHelpers)
 include(KDEInstallDirs)
 include(KDECompilerSettings)
 include(KDECMakeSettings)
@@ -48,7 +48,7 @@ add_subdirectory(tests)
 # Create a Config.cmake and a ConfigVersion.cmake file and install them
 set(CMAKECONFIG_INSTALL_DIR "${CMAKECONFIG_INSTALL_PREFIX}/KF5Runner")
 
-configure_package_config_file(
+ecm_configure_package_config_file(
     "${CMAKE_CURRENT_SOURCE_DIR}/KF5RunnerConfig.cmake.in"
     "${CMAKE_CURRENT_BINARY_DIR}/KF5RunnerConfig.cmake"
     INSTALL_DESTINATION "${CMAKECONFIG_INSTALL_DIR}"
