--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -1,1 +1,9 @@
+maintainer:
+description: Parallelized query system
 tier: 3
+type: solution
+platforms:
+    - name: All
+portingAid: true
+deprecated: true
+release: true
