fix include path in .pri files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -70,11 +70,6 @@ install(FILES
    DESTINATION ${SERVICETYPES_INSTALL_DIR})
 
 include(ECMGeneratePriFile)
-ecm_generate_pri_file(
-    BASE_NAME KRunner
-    LIB_NAME KF5Runner
-    DEPS "core"
-    FILENAME_VAR PRI_FILENAME
-)
+ecm_generate_pri_file(BASE_NAME KRunner LIB_NAME KF5Runner DEPS "core" FILENAME_VAR PRI_FILENAME INCLUDE_INSTALL_DIR ${KF5_INCLUDE_INSTALL_DIR}/KRunner)
 install(FILES ${PRI_FILENAME}
         DESTINATION ${ECM_MKSPECS_INSTALL_DIR})
