--- a/KF5RunnerConfig.cmake.in
+++ b/KF5RunnerConfig.cmake.in
@@ -1,7 +1,7 @@
 @PACKAGE_INIT@
 
 find_dependency(Qt5Core "@REQUIRED_QT_VERSION@")
-find_dependency(KF5Plasma "@KF5_VERSION@")
+find_dependency(KF5Plasma "@KF5_DEP_VERSION@")
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF5RunnerTargets.cmake")
 
