--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -7,3 +7,7 @@ platforms:
 portingAid: true
 deprecated: true
 release: true
+libraries:
+ - qmake: KRunner
+   cmake: "KF5::Runner"
+cmakename: KF5Runner
