Move private stuff out of a private folder
It does not make sense to have them in a private folder. There isn't so
much code in krunner that we need a separate folder.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(declarative)
 add_library(KF5Runner
     abstractrunner.cpp
 #     scripting/runnerscript.cpp
-    private/runnerjobs.cpp
+    runnerjobs.cpp
     querymatch.cpp
     runnercontext.cpp
     runnermanager.cpp
