Port KRunner to categorized logging
REVIEW: 121850
BUG: 342491

--- a/src/declarative/CMakeLists.txt
+++ b/src/declarative/CMakeLists.txt
@@ -3,6 +3,7 @@ project(runnermodel)
 set(runnermodel_SRCS
     runnermodel.cpp
     runnermodelplugin.cpp
+    krunner_debug.cpp
     )
 
 add_library(runnermodelplugin SHARED ${runnermodel_SRCS})
