Individually specify supported platforms

--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -3,7 +3,9 @@ description: Parallelized query system
 tier: 3
 type: solution
 platforms:
-    - name: All
+    - name: Linux
+    - name: Windows
+    - name: MacOSX
 portingAid: false
 deprecated: false
 release: true
