[FEATURE] Option to build & install QCH file with the public API dox
Using the new extra-cmake-modules module ECMAddQch (since 5.36.0)
this adds the option to automatically build and install a file
in QCH format with the docs about the public API, which then can be
used e.g. in Qt Assistant, Qt Creator or KDevelop.

Additionally the installed cmake config files will be extended
with a target KF5Runner_QCH containing information about how to "link"
into the generated QCH file, which then can be used in the cmake build
system of other libraries building on this library, by
simply listing this target in "LINK_QCHS" of their ecm_add_qch() usage.
And a respective doxygen tag file with all the metadata about the
generated QCH file and used for the "linking" will be created and
installed.

Pass -DBUILD_QCH=ON to cmake to enable this.

--- a/KF5RunnerConfig.cmake.in
+++ b/KF5RunnerConfig.cmake.in
@@ -5,4 +5,4 @@ find_dependency(Qt5Core "@REQUIRED_QT_VERSION@")
 find_dependency(KF5Plasma "@KF5_DEP_VERSION@")
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF5RunnerTargets.cmake")
-
+@PACKAGE_INCLUDE_QCHTARGETS@
