cmake: use ecm_add_tests
simpler way to add the tests

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -1,16 +1,8 @@
 find_package(Qt5 ${REQUIRED_QT_VERSION} CONFIG REQUIRED Test)
 
-include(ECMMarkAsTest)
+include(ECMAddTests)
 
-macro(krunner_tests)
-    foreach(_testname ${ARGN})
-        add_executable(${_testname} ${_testname}.cpp)
-        target_link_libraries(${_testname} Qt5::Test KF5::KIOCore KF5Runner)
-        add_test(krunner-${_testname} ${_testname})
-        ecm_mark_as_test(${_testname})
-    endforeach(_testname)
-endmacro()
-
-krunner_tests(
-   runnercontexttest
+ecm_add_tests(
+   runnercontexttest.cpp
+   LINK_LIBRARIES Qt5::Test KF5::KIOCore KF5Runner
 )
