--- a/templates/runner/CMakeLists.txt
+++ b/templates/runner/CMakeLists.txt
@@ -1,31 +1,20 @@
-project(plasma-%{APPNAMELC})
+cmake_minimum_required(VERSION 3.0)
 
-cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
+project(%{APPNAMELC})
 
-set(QT_MIN_VERSION "5.4.0")
-set(KF5_MIN_VERSION "5.14.0")
-set(INSTALL_SDDM_THEME TRUE)
-find_package(Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Widgets )
-find_package(ECM 1.8.0 REQUIRED NO_MODULE)
+set(QT_MIN_VERSION "5.9.0")
+set(KF5_MIN_VERSION "5.42.0")
+
+find_package(ECM ${KF5_MIN_VERSION} REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR})
-find_package(KF5 ${KF5_MIN_VERSION} REQUIRED COMPONENTS Runner)
+find_package(Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Widgets)
+find_package(KF5 ${KF5_MIN_VERSION} REQUIRED COMPONENTS Runner I18n)
 
 include(KDEInstallDirs)
 include(KDECMakeSettings)
 include(KDECompilerSettings NO_POLICY_SCOPE)
-include(ECMPackageConfigHelpers)
-include(ECMMarkNonGuiExecutable)
-include(CMakePackageConfigHelpers)
-include(WriteBasicConfigVersionFile)
-include(CheckIncludeFiles)
 include(FeatureSummary)
-include(ECMOptionalAddSubdirectory)
 
-set(%{APPNAMELC}_SRCS %{APPNAMELC}.cpp)
+add_subdirectory(src)
 
-add_library(krunner_%{APPNAMELC} MODULE ${%{APPNAMELC}_SRCS})
-target_link_libraries(krunner_%{APPNAMELC} KF5::Runner)
-
-install(TARGETS krunner_%{APPNAMELC} DESTINATION ${KDE_INSTALL_PLUGINDIR})
-
-install(FILES %{APPNAMELC}.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
+feature_summary(WHAT ALL INCLUDE_QUIET_PACKAGES FATAL_ON_MISSING_REQUIRED_PACKAGES)
