--- a/templates/runner/src/plasma-runner-%{APPNAMELC}.desktop
+++ b/templates/runner/src/plasma-runner-%{APPNAMELC}.desktop
@@ -10,5 +10,5 @@ X-KDE-PluginInfo-Author=%{AUTHOR}
 X-KDE-PluginInfo-Email=%{EMAIL}
 X-KDE-PluginInfo-Name=%{APPNAMELC}
 X-KDE-PluginInfo-Version=0.1
-X-KDE-PluginInfo-License=GPL
+X-KDE-PluginInfo-License=LGPL 2.1+
 X-KDE-PluginInfo-EnabledByDefault=true
