--- a/autotests/dbusrunnertestmulti.desktop
+++ b/autotests/dbusrunnertestmulti.desktop
@@ -11,5 +11,5 @@ X-KDE-PluginInfo-Version=1.0
 X-KDE-PluginInfo-License=LGPL
 X-KDE-PluginInfo-EnabledByDefault=true
 X-Plasma-API=DBus
-X-Plasma-DBusRunner-Service=net.krunnertests.dave
+X-Plasma-DBusRunner-Service=net.krunnertests.multi.*
 X-Plasma-DBusRunner-Path=/dave
