autotests: ensure Plasma/Runner servicetype is found in CI
This should fix
    Request for unknown property "X-Plasma-DBusRunner-Service"
but it doesn't look like this is enough to fully fix dbusrunnertest yet.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -75,6 +75,14 @@ install(FILES
    data/servicetypes/plasma-runner.desktop
    DESTINATION ${SERVICETYPES_INSTALL_DIR})
 
+add_custom_target(copy_servicetypes)
+file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/bin/data/kservicetypes5)
+add_custom_command(TARGET copy_servicetypes PRE_BUILD COMMAND
+    ${CMAKE_COMMAND} -E copy
+    ${CMAKE_CURRENT_SOURCE_DIR}/data/servicetypes/plasma-runner.desktop
+    ${CMAKE_BINARY_DIR}/bin/data/kservicetypes5)
+add_dependencies(KF5Runner copy_servicetypes)
+
 if(BUILD_QCH)
     ecm_add_qch(
         KF5Runner_QCH
