Install in new logging directory when we use kf5 5.59.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,7 +98,7 @@ install(FILES "${CMAKE_CURRENT_BINARY_DIR}/krunner_version.h"
         COMPONENT Devel)
 
     # contains list of debug categories, for kdebugsettings
-install(FILES krunner.categories DESTINATION ${KDE_INSTALL_CONFDIR})
+install(FILES krunner.categories  DESTINATION  ${KDE_INSTALL_LOGGINGCATEGORIESDIR})
 
 
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
