--- a/KF5RunnerConfig.cmake.in
+++ b/KF5RunnerConfig.cmake.in
@@ -4,11 +4,7 @@ include(CMakeFindDependencyMacro)
 find_dependency(Qt5Core "@REQUIRED_QT_VERSION@")
 find_dependency(KF5Plasma "@KF5_DEP_VERSION@")
 
-if(NOT CMAKE_VERSION VERSION_LESS "3.10.0")
-    # CMake 3.9+ warns about automoc on files without Q_OBJECT, and doesn't know about other macros.
-    # 3.10+ lets us provide more macro names that require automoc.
-    list(APPEND CMAKE_AUTOMOC_MACRO_NAMES @KRunner_AUTOMOC_MACRO_NAMES@)
-endif()
+@PACKAGE_SETUP_AUTOMOC_VARIABLES@
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF5RunnerTargets.cmake")
 @PACKAGE_INCLUDE_QCHTARGETS@
