Teach kapidox/ecm_add_qch about KRUNNER_DEPRECATED_VERSION_BELATED
NO_CHANGELOG

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -122,6 +122,7 @@ if(BUILD_QCH)
             KRUNNER_DEPRECATED
             KRUNNER_DEPRECATED_EXPORT
             "KRUNNER_DEPRECATED_VERSION(x, y, t)"
+            "KRUNNER_DEPRECATED_VERSION_BELATED(x, y, xt, yt, t)"
         PREDEFINED_MACROS
             "PLASMA_ENABLE_DEPRECATED_SINCE(x, y)=1"
         TAGFILE_INSTALL_DESTINATION ${KDE_INSTALL_QTQCHDIR}
