Use embedded JSON metadata for binary plugins & custom for D-Bus plugins
This adds support for
* finding binary KRunner plugins in an own subdir
  (KPluginLoader paths + "/kf5/krunner")
  and using JSON metadata embedded in the plugins
* finding  desktop-file based metadata about D-Bus plugins
  in an own subdir
  (QStandardPaths::GenericDataLocation + "/krunner/dbusplugins)
and makes this the new preferred plugin system.

Plugins and their metadata from the old KService-based system are still
supported for backward-compatibility, but is marked as deprecated.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,7 +31,7 @@ ecm_generate_export_header(KF5Runner
     GROUP_BASE_NAME KF
     VERSION ${KF5_VERSION}
     DEPRECATED_BASE_VERSION 0
-    DEPRECATION_VERSIONS 5.28 5.71
+    DEPRECATION_VERSIONS 5.28 5.71 5.72
     EXCLUDE_DEPRECATED_BEFORE_AND_AT ${EXCLUDE_DEPRECATED_BEFORE_AND_AT}
 )
 
@@ -130,6 +130,7 @@ if(BUILD_QCH)
             "KRUNNER_DEPRECATED_VERSION(x, y, t)"
             "KRUNNER_DEPRECATED_VERSION_BELATED(x, y, xt, yt, t)"
         PREDEFINED_MACROS
+            "KSERVICE_BUILD_DEPRECATED_SINCE(x, y)=1"
             "PLASMA_ENABLE_DEPRECATED_SINCE(x, y)=1"
         TAGFILE_INSTALL_DESTINATION ${KDE_INSTALL_QTQCHDIR}
         QCH_INSTALL_DESTINATION ${KDE_INSTALL_QTQCHDIR}
