--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,8 @@ ecm_setup_qtplugin_macro_names(
     JSON_NONE
         "K_EXPORT_PLASMA_RUNNER"
         "K_EXPORT_RUNNER_CONFIG"
+    JSON_ARG2
+        "K_EXPORT_PLASMA_RUNNER_WITH_JSON"
     CONFIG_CODE_VARIABLE
         PACKAGE_SETUP_AUTOMOC_VARIABLES
 )
