--- a/src/declarative/CMakeLists.txt
+++ b/src/declarative/CMakeLists.txt
@@ -4,7 +4,11 @@ set(runnermodel_SRCS
     runnermodel.cpp
     runnermodelplugin.cpp
     )
-ecm_qt_declare_logging_category(runnermodel_SRCS HEADER krunner_debug.h IDENTIFIER KRUNNER CATEGORY_NAME org.kde.krunner)
+ecm_qt_declare_logging_category(runnermodel_SRCS
+    HEADER krunner_debug.h
+    IDENTIFIER KRUNNER
+    CATEGORY_NAME kf.runner.quick
+)
 
 add_library(runnermodelplugin SHARED ${runnermodel_SRCS})
 target_link_libraries(runnermodelplugin
