--- a/templates/CMakeLists.txt
+++ b/templates/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(apptemplate_DIRS
     runner
+    runnerpython
 )
 
 kde_package_app_templates(TEMPLATES ${apptemplate_DIRS} INSTALL_DIR ${KDE_INSTALL_KTEMPLATESDIR})
