--- a/autotests/dbusrunnertest.desktop
+++ b/autotests/dbusrunnertest.desktop
@@ -14,3 +14,5 @@ X-Plasma-API=DBus
 X-Plasma-DBusRunner-Service=net.krunnertests.dave
 X-Plasma-DBusRunner-Path=/dave
 X-Plasma-Request-Actions-Once=true
+X-Plasma-Runner-Min-Letter-Count=3
+X-Plasma-Runner-Match-Regex=^fo
