--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -2,10 +2,13 @@ find_package(Qt5 ${REQUIRED_QT_VERSION} CONFIG REQUIRED Test)
 
 include(ECMAddTests)
 
-ecm_add_tests(
-   runnercontexttest.cpp
-   LINK_LIBRARIES Qt5::Test KF5::KIOCore KF5Runner
-)
+if(NOT EXCLUDE_DEPRECATED_BEFORE_AND_AT STREQUAL "CURRENT" AND
+        EXCLUDE_DEPRECATED_BEFORE_AND_AT VERSION_LESS 5.76.0)
+    ecm_add_tests(
+            runnercontexttest.cpp
+            LINK_LIBRARIES Qt5::Test KF5::KIOCore KF5Runner
+    )
+endif()
 
 ecm_add_tests(
    dbusrunnertest.cpp
