Rework internals of match id methods and add tests for it
While they seems largely unused we should at least make sure
they do not regressed while refactoring

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -15,6 +15,11 @@ ecm_add_tests(
    LINK_LIBRARIES Qt5::Test KF5::KIOCore KF5Runner Qt5::Widgets
 )
 
+ecm_add_tests(
+        runnermatchmethodstest.cpp
+        LINK_LIBRARIES Qt5::Test KF5::KIOCore KF5Runner Qt5::Widgets
+)
+
 set(demoapp_SRCS testremoterunner.cpp)
 qt5_add_dbus_adaptor(demoapp_SRCS "../src/data/org.kde.krunner1.xml" testremoterunner.h TestRemoteRunner)
 add_executable(testremoterunner ${demoapp_SRCS})
