Do not build RunnerContextTest on windows
It would fail, because for the most part UNIX paths are used.
Also the entire concept is deprecated.

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -3,7 +3,8 @@ find_package(Qt5 ${REQUIRED_QT_VERSION} CONFIG REQUIRED Test)
 include(ECMAddTests)
 
 if(NOT EXCLUDE_DEPRECATED_BEFORE_AND_AT STREQUAL "CURRENT" AND
-        EXCLUDE_DEPRECATED_BEFORE_AND_AT VERSION_LESS 5.76.0)
+        EXCLUDE_DEPRECATED_BEFORE_AND_AT VERSION_LESS 5.76.0
+        AND NOT WIN32)
     ecm_add_tests(
             runnercontexttest.cpp
             LINK_LIBRARIES Qt5::Test KF5::KIOCore KF5Runner
