--- a/autotests/dbusrunnertest.desktop
+++ b/autotests/dbusrunnertest.desktop
@@ -16,3 +16,5 @@ X-Plasma-DBusRunner-Path=/dave
 X-Plasma-Request-Actions-Once=true
 X-Plasma-Runner-Min-Letter-Count=3
 X-Plasma-Runner-Match-Regex=^fo
+X-Plasma-Runner-Syntaxes=syntax1,syntax2
+X-Plasma-Runner-Syntax-Descriptions=description1,description2
