--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -15,8 +15,6 @@ ecm_add_tests(
    dbusrunnertest.cpp
    LINK_LIBRARIES Qt5::Test KF5::KIOCore KF5Runner Qt5::Widgets
 )
-target_compile_definitions(dbusrunnertest PUBLIC -DDBUS_RUNNER_BINARY="${CMAKE_BINARY_DIR}/bin/testremoterunner")
-
 ecm_add_tests(
         runnermatchmethodstest.cpp
         LINK_LIBRARIES Qt5::Test KF5::KIOCore KF5Runner Qt5::Widgets
@@ -29,3 +27,5 @@ target_link_libraries(testremoterunner
     Qt5::DBus
     KF5::Runner
 )
+set(remote_runner_bin "$<TARGET_FILE:testremoterunner>")
+target_compile_definitions(dbusrunnertest PUBLIC -DDBUS_RUNNER_BINARY="${remote_runner_bin}")
