--- a/KF5RunnerConfig.cmake.in
+++ b/KF5RunnerConfig.cmake.in
@@ -7,4 +7,5 @@ find_dependency(KF5Plasma "@KF_DEP_VERSION@")
 @PACKAGE_SETUP_AUTOMOC_VARIABLES@
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF5RunnerTargets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/KF5KRunnerMacros.cmake")
 @PACKAGE_INCLUDE_QCHTARGETS@
