Allow runners to prevent duplicate results
This commit allows the runners to use the id to prevent duplicate
results. For this the X-Plasma-Runner-Unique-Results property is added.
If the runners set this to true the runner name is not prepended to the id and
it is checked if a match with the id already exists before the match is added.

Because the property introduces a behavior change we can not enable it
by default.

In case there are duplicate results the results from the runner which has the X-Plasma-Runner-Weak-Results property
set to true will be removed. Otherwise the results from the first runner
will be used.

BUG: 406292
FIXED-IN: Frameworks 5.82 & Plasma 5.22

--- a/src/data/servicetypes/plasma-runner.desktop
+++ b/src/data/servicetypes/plasma-runner.desktop
@@ -95,3 +95,12 @@ Type=int
 # In case both the regex and the letter count is set the letter count is checked first
 [PropertyDef::X-Plasma-Runner-Match-Regex]
 Type=QString
+
+# If this property is set to true the RunnerContext will check if a match with the same Id already exists
+# if yes it is not added. This also removed the <runnername>_ prefix from the match id.
+[PropertyDef::X-Plasma-Runner-Unique-Results]
+Type=bool
+
+# If a runner has produced a match with the same id the match will be removed in favor of the other runner's match
+[PropertyDef::X-Plasma-Runner-Weak-Results]
+Type=bool
