--- a/autotests/dbusrunnertest.desktop
+++ b/autotests/dbusrunnertest.desktop
@@ -19,3 +19,4 @@ X-Plasma-Runner-Min-Letter-Count=3
 X-Plasma-Runner-Match-Regex=^fo
 X-Plasma-Runner-Syntaxes=syntax1,syntax2
 X-Plasma-Runner-Syntax-Descriptions=description1,description2
+X-Plasma-Runner-Lifecycle-Methods=true
