--- a/autotests/dbusrunnertestmulti.desktop
+++ b/autotests/dbusrunnertestmulti.desktop
@@ -1,15 +1,16 @@
 [Desktop Entry]
-Name=DBus runner test
-Comment=DBus runner test
+Name=DBus runner testmulti
+Comment=DBus runner testmulti
 X-KDE-ServiceTypes=Plasma/Runner
 Type=Service
 Icon=internet-web-browser
 X-KDE-PluginInfo-Author=Some Developer
 X-KDE-PluginInfo-Email=kde@example.com
-X-KDE-PluginInfo-Name=dbusrunnertest
+X-KDE-PluginInfo-Name=dbusrunnertestmulti
 X-KDE-PluginInfo-Version=1.0
 X-KDE-PluginInfo-License=LGPL
 X-KDE-PluginInfo-EnabledByDefault=true
+X-Plasma-AdvertiseSingleRunnerQueryMode=true
 X-Plasma-API=DBus
 X-Plasma-DBusRunner-Service=net.krunnertests.multi.*
 X-Plasma-DBusRunner-Path=/dave
