--- a/autotests/dbusrunnertest.desktop
+++ b/autotests/dbusrunnertest.desktop
@@ -10,6 +10,7 @@ X-KDE-PluginInfo-Name=dbusrunnertest
 X-KDE-PluginInfo-Version=1.0
 X-KDE-PluginInfo-License=LGPL
 X-KDE-PluginInfo-EnabledByDefault=true
+X-Plasma-AdvertiseSingleRunnerQueryMode=true
 X-Plasma-API=DBus
 X-Plasma-DBusRunner-Service=net.krunnertests.dave
 X-Plasma-DBusRunner-Path=/dave
